option('cc_path',
       type: 'string',
       value: '',
       description: 'Location of the core C23 compiler')
option('coverage',
       type: 'boolean',
       value: false,
       description: 'Build with Clang source-based code coverage instrumentation')
option('rstr_template_styled',
       type: 'string',
       value: '',
       description: 'Override the default styled rstr code generation template')
option('rstr_template_plain',
       type: 'string',
       value: '',
       description: 'Override the default plain rstr code generation template')
option('rstr_static_ref_template_styled',
       type: 'string',
       value: '',
       description: 'Override the styled rstr static-ref declaration template')
option('rstr_static_ref_template_plain',
       type: 'string',
       value: '',
       description: 'Override the plain rstr static-ref declaration template')
option('rstr_static_ref_expr_styled',
       type: 'string',
       value: '',
       description: 'Override the styled rstr static-ref expression template')
option('rstr_static_ref_expr_plain',
       type: 'string',
       value: '',
       description: 'Override the plain rstr static-ref expression template')
option('array_literal_data_template',
       type: 'string',
       value: '',
       description: 'Override the array literal backing storage declaration template')
option('array_literal_data_expr',
       type: 'string',
       value: '',
       description: 'Override the expression used as the array literal data pointer')
option('static_object_entry_attr',
       type: 'string',
       value: '',
       description: 'Attribute text emitted on generated static-object descriptor entries')
option('vargs_type',
       type: 'string',
       value: '',
       description: 'Override the vargs struct type name (default: ncc_vargs_t)')
option('once_prefix',
       type: 'string',
       value: '',
       description: 'Override the once-guard identifier prefix (default: __ncc_)')
option('rstr_string_type',
       type: 'string',
       value: '',
       description: 'Override the rstr string type name for typehash (default: ncc_string_t*)')
option('rstr_text_style_type',
       type: 'string',
       value: '',
       description: 'Override the styled rstr text style type name (default: ncc_text_style_t)')
option('rstr_style_record_type',
       type: 'string',
       value: '',
       description: 'Override the styled rstr style record type name (default: ncc_style_record_t)')
option('mem_debug',
       type: 'boolean',
       value: false,
       description: 'Enable memory allocation tracking and per-stage reporting')
option('gc_stack_maps',
       type: 'boolean',
       value: false,
       description: 'Enable n00b GC stack-map emission by default for this ncc binary')
